Fix iPad navigation overlapping blocks when closed, 9.2.8

--- a/sass/navigation/_nav-mobile.scss
+++ b/sass/navigation/_nav-mobile.scss
@@ -49,9 +49,14 @@
 @media screen and (max-width: $width-max-mobile - 1px) {
   // The nav is always absolute on mobile
   .site-header nav {
+    max-height: 72px;
     position: absolute;
     right: 0;
     top: 0;
+  }
+
+  .js-nav-active nav {
+    max-height: unset;
   }
 
   // Let's ensure site-header loads properly and doesn't leave empty spaces
